--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults and supports es6-module",
+    "not IE 11",
+    "not dead"
+  ]
 }
